cmake component fixes
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@873 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/CMakeLists.txt
+++ b/dom/CMakeLists.txt
@@ -27,16 +27,16 @@ if( OPT_COLLADA14 )
   install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/1.4 DESTINATION ${COLLADA_DOM_INCLUDE_INSTALL_DIR} COMPONENT ${COMPONENT_PREFIX}-dev  PATTERN ".svn" EXCLUDE PATTERN ".~" EXCLUDE)
 endif()
 
-add_library(colladadom SHARED ${COLLADA_BASE_SOURCES})
-target_link_libraries(colladadom ${COLLADA_LIBS})
-set_target_properties(colladadom PROPERTIES
+add_library(collada-dom SHARED ${COLLADA_BASE_SOURCES})
+target_link_libraries(collada-dom ${COLLADA_LIBS})
+set_target_properties(collada-dom PROPERTIES
   COMPILE_FLAGS "${COLLADA_COMPILE_FLAGS}"
   LINK_FLAGS "${libpcrecpp_LDFLAGS_OTHERS}"
   OUTPUT_NAME collada-dom${COLLADA_DOM_LIBRARY_SUFFIX}
   CLEAN_DIRECT_OUTPUT 1
-  SOVERSION ${COLLADA_DOM_SOVERSION}
+  SOVERSION 0 # always have it 0 since we're including the soversion as part of the library name
   VERSION ${COLLADA_DOM_VERSION})
-install(TARGETS colladadom DESTINATION lib${LIB_SUFFIX} COMPONENT ${COMPONENT_PREFIX} )
+install(TARGETS collada-dom EXPORT collada-dom-targets DESTINATION lib${LIB_SUFFIX} COMPONENT ${COMPONENT_PREFIX} )
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/dae DESTINATION ${COLLADA_DOM_INCLUDE_INSTALL_DIR} COMPONENT ${COMPONENT_PREFIX}-dev PATTERN ".svn" EXCLUDE PATTERN ".~" EXCLUDE)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/modules DESTINATION ${COLLADA_DOM_INCLUDE_INSTALL_DIR} COMPONENT ${COMPONENT_PREFIX}-dev  PATTERN ".svn" EXCLUDE PATTERN ".~" EXCLUDE)
