--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ set(PACKAGE_VERSION "0" CACHE STRING "the package-specific version used for uplo
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules")
 set(COMPONENT_PREFIX "${CPACK_DEBIAN_PACKAGE_NAME}")
 string(TOUPPER ${COMPONENT_PREFIX} COMPONENT_PREFIX_UPPER)
-set(CPACK_COMPONENTS_ALL ${COMPONENT_PREFIX} ${COMPONENT_PREFIX}-dev)
+set(CPACK_COMPONENTS_ALL ${COMPONENT_PREFIX}-dev)
 
 if( MSVC )
   if( MSVC70 OR MSVC71 )
