--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ set(PACKAGE_VERSION "0" CACHE STRING "the package-specific version used for uplo
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules")
 set(COMPONENT_PREFIX "${CPACK_DEBIAN_PACKAGE_NAME}")
 string(TOUPPER ${COMPONENT_PREFIX} COMPONENT_PREFIX_UPPER)
-set(CPACK_COMPONENTS_ALL ${COMPONENT_PREFIX}-dev)
+set(CPACK_COMPONENTS_ALL l{COMPONENT_PREFIX}-base ${COMPONENT_PREFIX}-dev)
 
 if( MSVC )
   if( MSVC70 OR MSVC71 )
@@ -299,8 +299,9 @@ if(CMAKE_CPACK_COMMAND AND UNIX AND OPT_BUILD_PACKAGES)
   set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/description)
   set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/dom/license.txt)
 
-  set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DISPLAY_NAME "common headers and installs")
-  set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DEPENDS ${CPACK_DEBIAN_PACKAGE_NAME})
+  set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-BASE_DISPLAY_NAME "core libraries")
+  set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DISPLAY_NAME "C++ headers and build tools")
+  set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DEPENDS ${COMPONENT_PREFIX}-base)
   
   set(CPACK_DEBIAN_BUILD_DEPENDS debhelper cmake libxml2-dev libboost-dev zlib1g-dev libboost-filesystem-dev libboost-system-dev libpcre3-dev pkg-config)
 
