--- a/collada_dom-config.cmake.in
+++ b/collada_dom-config.cmake.in
@@ -1,6 +1,6 @@
 # - Find Collada Dom Installation
 #
-# Make sure a component is set to select the collada specification to link with. For example "1.4" or "1.5".
+# In order to check if the collada library supports a particular collada spec version, set a component to "1.4.1" or "1.5.0".
 #
 # Users can set the following variables before calling the module:
 #  COLLADA_DOM_DIR - The preferred installation prefix for searching for COLLADA. Set by the user.
@@ -45,21 +45,21 @@ set( COLLADA_DOM_LIBRARIES collada-dom${COLLADA_DOM_LIBRARY_SUFFIX})
 set(OPT_COLLADA14 @OPT_COLLADA14@)
 set(OPT_COLLADA15 @OPT_COLLADA14@)
 
-if( COLLADA_DOM_FIND_COMPONENTS STREQUAL "1.4" )
+if( COLLADA_DOM_FIND_COMPONENTS STREQUAL "1.4" OR COLLADA_DOM_FIND_COMPONENTS STREQUAL "1.4.1" )
   if( NOT OPT_COLLADA14 )
-      message(SEND_ERROR "Not compiled with collada 1.4 support")
+      message(SEND_ERROR "Not compiled with collada ${COLLADA_DOM_FIND_COMPONENTS} support")
   endif()
 #  set( COLLADA_DOM_INCLUDE_DIRS ${COLLADA_DOM_INCLUDE_DIRS} "${COLLADA_DOM_ROOT_DIR}/@COLLADA_DOM_INCLUDE_INSTALL_DIR@/1.4")
 endif()
-if( COLLADA_DOM_FIND_COMPONENTS STREQUAL "1.5" )
+if( COLLADA_DOM_FIND_COMPONENTS STREQUAL "1.5" OR COLLADA_DOM_FIND_COMPONENTS STREQUAL "1.5.0" )
   if( NOT OPT_COLLADA15 )
-      message(SEND_ERROR "Not compiled with collada 1.5 support")
+      message(SEND_ERROR "Not compiled with collada ${COLLADA_DOM_FIND_COMPONENTS} support")
   endif()
 #  set( COLLADA_DOM_INCLUDE_DIRS ${COLLADA_DOM_INCLUDE_DIRS} "${COLLADA_DOM_ROOT_DIR}/@COLLADA_DOM_INCLUDE_INSTALL_DIR@/1.5")
 endif()
 
 if( NOT COLLADA_DOM_LIBRARIES )
-  message(FATAL_ERROR "need to specify a collada specification component, for example '1.4' or '1.5'")
+  message(FATAL_ERROR "need to specify a collada specification component, for example '1.4.1' or '1.5.0'")
 endif()
 
 set( COLLADA_DOM_Boost_VERSION "@Boost_MAJOR_VERSION@.@Boost_MINOR_VERSION@")
