--- a/collada_dom-config-version.cmake.in
+++ b/collada_dom-config-version.cmake.in
@@ -3,12 +3,12 @@ if( "${PACKAGE_FIND_VERSION}" VERSION_EQUAL "@COLLADA_DOM_VERSION@")
   set(PACKAGE_VERSION_EXACT 1)
 endif()
 if( "${PACKAGE_FIND_VERSION_MAJOR}.${PACKAGE_FIND_VERSION_MINOR}" EQUAL "@COLLADA_DOM_SOVERSION@" )
-  if( "${PACKAGE_FIND_VERSION_MINOR}" GREATER 0 )
+  if( ${PACKAGE_FIND_VERSION_MINOR} GREATER 0 )
     set(PACKAGE_VERSION_COMPATIBLE 1)
   endif()
 elseif( "${PACKAGE_FIND_VERSION_MAJOR}" EQUAL "@COLLADA_DOM_VERSION_MAJOR@" )
   # for now backward compatible with most minor versions...
-  if( "${PACKAGE_FIND_VERSION_MINOR}" GREATER 0 )
+  if( ${PACKAGE_FIND_VERSION_MINOR} GREATER 0 )
     set(PACKAGE_VERSION_COMPATIBLE 1)
   endif()
 endif()
