Some errata vis-a-vis the prior revision: -Make precompiled header set up easier. -Make built-in plugins import friendly. -Fix oversight keeping user-objects from using the DOM database memory pool. -Add custom Visual Studio "natvis" visual memory inspector (for debugging) to projects folder. -Caught last second change that introduced a double XML-declaration bug when writing document. -Et cetera.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@895 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/projects/vc8-PS3/dom.vcproj
+++ b/dom/projects/vc8-PS3/dom.vcproj
@@ -42,7 +42,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_CRT_SECURE_NO_DEPRECATE;EXPORTING_COLLADA_DOM;BUILDING_IN_LIBXML;"
 				
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;"
-				PreprocessorDefinitions="SN_TARGET_PS3;__CELLOS_LV2__;_DEBUG;__GCC__;DOM_BUILDING_IN_TINYXML;NO_ZAE"
+				PreprocessorDefinitions="SN_TARGET_PS3;__CELLOS_LV2__;_DEBUG;__GCC__;DOM_BUILDING_IN_TINYXML;"
 				ProgramDataBaseFileName="$(IntDir)\"
 				DebugInformationFormat="0"
 				CompileAs="0"
@@ -103,7 +103,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-O2 -Wall"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;"
-				PreprocessorDefinitions="SN_TARGET_PS3;BUILDING_IN_TINYXML;NDEBUG;__GCC__;NO_ZAE"
+				PreprocessorDefinitions="SN_TARGET_PS3;BUILDING_IN_TINYXML;NDEBUG;__GCC__;"
 				ProgramDataBaseFileName="$(IntDir)\"
 				DebugInformationFormat="0"
 				CompileAs="0"
