Alexx83 provided a helpful patch: https://sourceforge.net/p/collada-dom/patches/9/ Also included are "codeGen" fixes for 1.4.1 substitutionGroup types, built and tested. Also daeSIDREF has been fixed and tested, including a new extension to daeRef::get for casting COLLADA's scalar/vector targets. Ex: ref.get<float>(), ref.get<double,4>(rgba,1,"profile") where 1 is a default filler and "profile" initializes a default daeRefRequest argument. Unfortunately there are quasi-SID references that I didn't get to work on before nightfall. Miscellaneous work since the last commit (mostly I'm working on getting the fx, rt, and viewer folders in order since.)
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@897 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ if( LIBXML2_FOUND )
   include_directories(${LIBXML2_INCLUDE_DIR})
   add_definitions(${LIBXML2_DEFINITIONS} -DBUILDING_IN_LIBXML)
   message(STATUS "libxml2 found")
-else()
++endif()
 
 pkg_check_modules(minizip minizip)
 if(minizip_FOUND)
