Adds COLLADA 1.5.0 visuals to the viewer project and X and Z_UP processing to <matrix> like transforms and other viewer features. Fixes <instance_node> parent bug. Adds CodeGen features already in the pregenerated headers.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@909 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/projects/vc10-Win/dom.vcxproj
+++ b/dom/projects/vc10-Win/dom.vcxproj
@@ -139,6 +139,7 @@
       </ForcedIncludeFiles>
       <GenerateXMLDocumentationFiles>false</GenerateXMLDocumentationFiles>
       <FloatingPointModel>Precise</FloatingPointModel>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
