Important URI handling and memmove/memcpy size parameter fixes. Tests against CTS external referencing including controller instancing work under RT. DevIL fix for upside-down stored textures. Default lighting fixes and smooth normal generation where NORMAL is not provided but FX requires it.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@910 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/rt/projects/vc10-Win/rt.vcxproj
+++ b/rt/projects/vc10-Win/rt.vcxproj
@@ -128,7 +128,7 @@
     <ClInclude Include="..\..\include\CrtPhysics.h" />
     <ClInclude Include="..\..\include\CrtRender.h" />
     <ClInclude Include="..\..\include\CrtScene.h" />
-    <ClInclude Include="..\..\include\CrtSceneYY.hpp" />
+    <ClInclude Include="..\..\include\CrtScene08.hpp" />
     <ClInclude Include="..\..\include\CrtTexture.h" />
     <ClInclude Include="..\..\include\CrtTypes.h" />
     <ClInclude Include="..\..\include\RT.pch.h" />
