FX overhaul to minimize use of the Cg API to make way for profile_GLSL. Adds per-pixel profile_COMMON shaders, using the FX framework. (GLSL needs work on the pipeline-states end to be turned on.) L keyboard input disables FX. Updates samples/ archive. Changes demo.dae to use inverse-transpose normal matrices. Diverging from Sailing The Gulf's plate.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@916 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/fx/projects/vc10-Win/fx.vcxproj
+++ b/fx/projects/vc10-Win/fx.vcxproj
@@ -93,7 +93,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\cfxAnnotate.cpp" />
+    <ClCompile Include="..\..\src\cfxCOMMON.cpp" />
     <ClCompile Include="..\..\src\cfxData.cpp" />
     <ClCompile Include="..\..\src\cfxEffect.cpp" />
     <ClCompile Include="..\..\src\cfxLoader.cpp" />
